// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros [FormattedHTMLMessage]: [FormattedHTMLMessage] 1`] = `

import * as React from 'react';
import { FormattedHTMLMessage } from 'react-intl.macro';

export default class Foo extends React.Component {
  render() {
    return (
      <FormattedHTMLMessage
        id="FormattedHTMLMessage.hello"
        defaultMessage='<div>Hello, {name}!</div>'
        description='Greeting to welcome the user to the app'
      />
    );
  }
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedHTMLMessage } from "react-intl";
import * as React from 'react';
export default class Foo extends React.Component {
  render() {
    return <FormattedHTMLMessage id="FormattedHTMLMessage.hello" defaultMessage='<div>Hello, {name}!</div>' description='Greeting to welcome the user to the app' />;
  }

}
[{
  "id": "FormattedHTMLMessage.hello",
  "defaultMessage": "<div>Hello, {name}!</div>",
  "description": "Greeting to welcome the user to the app"
}]

`;

exports[`macros [FormattedMessage] multiline with TemplateLiteral issue#38: [FormattedMessage] multiline with TemplateLiteral issue#38 1`] = `

import * as React from 'react';
import { FormattedMessage } from 'react-intl.macro';

export default class Foo extends React.Component {
  render() {
    return (
      <FormattedMessage
        id="Foo.hello"
        defaultMessage={\`Hello {name}, you have {unreadCount, number} {unreadCount, plural,
          one {message}
          other {messages}
        }\`}
        values={{name: <b>{name}</b>, unreadCount}}
      />
    );
  }
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from "react-intl";
import * as React from 'react';
export default class Foo extends React.Component {
  render() {
    return <FormattedMessage id="Foo.hello" defaultMessage={\`Hello {name}, you have {unreadCount, number} {unreadCount, plural,
          one {message}
          other {messages}
        }\`} values={{
      name: <b>{name}</b>,
      unreadCount
    }} />;
  }

}
[{
  "id": "Foo.hello",
  "defaultMessage": "Hello {name}, you have {unreadCount, number} {unreadCount,plural,one{message} other{messages}}"
}]

`;

exports[`macros [FormattedMessage] one X one: [FormattedMessage] one X one 1`] = `

import * as React from 'react';
import { FormattedMessage } from 'react-intl.macro';

export default class Foo extends React.Component {
  render() {
    return (
      <FormattedMessage
        id="Foo.hello"
        defaultMessage='Hello, {name}!'
        description='Greeting to welcome the user to the app'
      />
    );
  }
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from "react-intl";
import * as React from 'react';
export default class Foo extends React.Component {
  render() {
    return <FormattedMessage id="Foo.hello" defaultMessage='Hello, {name}!' description='Greeting to welcome the user to the app' />;
  }

}
[{
  "id": "Foo.hello",
  "defaultMessage": "Hello, {name}!",
  "description": "Greeting to welcome the user to the app"
}]

`;

exports[`macros [FormattedMessage] one X two: [FormattedMessage] one X two 1`] = `

import * as React from 'react';
import { FormattedMessage } from 'react-intl.macro';

export default class Foo extends React.Component {
  render() {
    return (
      <React.Fragment>
        <FormattedMessage
          id={1}
          defaultMessage='Hello, {name}!'
          description='Greeting to welcome the user to the app'
        />
        <FormattedMessage
          id={2}
          defaultMessage='Hello, {name}!'
          description='Greeting to welcome the user to the app'
        />
      </React.Fragment>
    );
  }
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from "react-intl";
import * as React from 'react';
export default class Foo extends React.Component {
  render() {
    return <React.Fragment>
        <FormattedMessage id={1} defaultMessage='Hello, {name}!' description='Greeting to welcome the user to the app' />
        <FormattedMessage id={2} defaultMessage='Hello, {name}!' description='Greeting to welcome the user to the app' />
      </React.Fragment>;
  }

}
[{
  "id": 1,
  "defaultMessage": "Hello, {name}!",
  "description": "Greeting to welcome the user to the app"
}, {
  "id": 2,
  "defaultMessage": "Hello, {name}!",
  "description": "Greeting to welcome the user to the app"
}]

`;

exports[`macros [FormattedMessage] should evaluate with expression issue#38: [FormattedMessage] should evaluate with expression issue#38 1`] = `

import * as React from 'react';
import { FormattedMessage } from 'react-intl.macro';

export default class Foo extends React.Component {
  render() {
    return (
      <FormattedMessage
        id={0 + 1}
        defaultMessage={\`\${1 + 2} Hello {name}, you have {unreadCount, number} {unreadCount, plural,
          one {message}
          other {messages}
        }\`}
        description={\`description \${1+ 1}\`}
        values={{name: <b>{name}</b>, unreadCount}}
      />
    );
  }
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from "react-intl";
import * as React from 'react';
export default class Foo extends React.Component {
  render() {
    return <FormattedMessage id={0 + 1} defaultMessage={\`\${1 + 2} Hello {name}, you have {unreadCount, number} {unreadCount, plural,
          one {message}
          other {messages}
        }\`} description={\`description \${1 + 1}\`} values={{
      name: <b>{name}</b>,
      unreadCount
    }} />;
  }

}
[{
  "id": 1,
  "defaultMessage": "3 Hello {name}, you have {unreadCount, number} {unreadCount,plural,one{message} other{messages}}",
  "description": "description 2"
}]

`;

exports[`macros [FormattedMessage] two X one: [FormattedMessage] two X one 1`] = `

import * as React from 'react';
import { FormattedMessage } from 'react-intl.macro';

class Foo extends React.Component {
  render() {
    return (
      <FormattedMessage
        id="Foo.hello"
        defaultMessage='Hello, {name}!'
        description='Greeting to welcome the user to the app'
      />
    );
  }
}

const Component = () => (
  <FormattedMessage
    id="Component.hello"
    defaultMessage='Hello, {name}!'
    description='Greeting to welcome the user to the app'
  />
)

      ↓ ↓ ↓ ↓ ↓ ↓

import { FormattedMessage } from "react-intl";
import * as React from 'react';

class Foo extends React.Component {
  render() {
    return <FormattedMessage id="Foo.hello" defaultMessage='Hello, {name}!' description='Greeting to welcome the user to the app' />;
  }

}

const Component = () => <FormattedMessage id="Component.hello" defaultMessage='Hello, {name}!' description='Greeting to welcome the user to the app' />;

[{
  "id": "Foo.hello",
  "defaultMessage": "Hello, {name}!",
  "description": "Greeting to welcome the user to the app"
}, {
  "id": "Component.hello",
  "defaultMessage": "Hello, {name}!",
  "description": "Greeting to welcome the user to the app"
}]

`;

exports[`macros [defineMessages, FormattedMessage, FormattedHTMLMessage]: [defineMessages, FormattedMessage, FormattedHTMLMessage] 1`] = `

import * as React from 'react';
import { defineMessages, FormattedMessage, FormattedHTMLMessage } from 'react-intl.macro';

const messages = defineMessages({
  'Component.greet': {
    id: 'defineMessages.greet',
    defaultMessage: 'Hello, {name}!',
    description: 'Greeting to welcome the user to the app',
  },
});

class Foo extends React.Component {
  render() {
    return (
      <React.Fragment>
        <FormattedMessage
          id="Foo.hello1"
          defaultMessage='Hello, {name}!'
          description='Greeting to welcome the user to the app'
        />
        <FormattedMessage
          id="Foo.hello2"
          defaultMessage='Hello, {name}!'
          description='Greeting to welcome the user to the app'
        />
      </React.Fragment>
    );
  }
}

const Component = () => (
  <FormattedHTMLMessage
    id="FormattedHTMLMessage.hello"
    defaultMessage='<div>Hello, {name}!</div>'
    description='Greeting to welcome the user to the app'
  />
)

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages, FormattedMessage, FormattedHTMLMessage } from "react-intl";
import * as React from 'react';
const messages = defineMessages({
  'Component.greet': {
    id: 'defineMessages.greet',
    defaultMessage: 'Hello, {name}!',
    description: 'Greeting to welcome the user to the app'
  }
});

class Foo extends React.Component {
  render() {
    return <React.Fragment>
        <FormattedMessage id="Foo.hello1" defaultMessage='Hello, {name}!' description='Greeting to welcome the user to the app' />
        <FormattedMessage id="Foo.hello2" defaultMessage='Hello, {name}!' description='Greeting to welcome the user to the app' />
      </React.Fragment>;
  }

}

const Component = () => <FormattedHTMLMessage id="FormattedHTMLMessage.hello" defaultMessage='<div>Hello, {name}!</div>' description='Greeting to welcome the user to the app' />;

[{
  "id": "defineMessages.greet",
  "defaultMessage": "Hello, {name}!",
  "description": "Greeting to welcome the user to the app"
}, {
  "id": "Foo.hello1",
  "defaultMessage": "Hello, {name}!",
  "description": "Greeting to welcome the user to the app"
}, {
  "id": "Foo.hello2",
  "defaultMessage": "Hello, {name}!",
  "description": "Greeting to welcome the user to the app"
}, {
  "id": "FormattedHTMLMessage.hello",
  "defaultMessage": "<div>Hello, {name}!</div>",
  "description": "Greeting to welcome the user to the app"
}]

`;

exports[`macros [defineMessages] callee alias: [defineMessages] callee alias 1`] = `

import { injectIntl } from 'react-intl';
import { defineMessages as def } from 'react-intl.macro';

const messages = def({
  'Component.greet': {
    id: 'Component.greet',
    defaultMessage: 'Hello, {name}!',
    description: 'Greeting to welcome the user to the app',
  },
});

export default messages;

      ↓ ↓ ↓ ↓ ↓ ↓

import { injectIntl, defineMessages as def } from 'react-intl';
const messages = def({
  'Component.greet': {
    id: 'Component.greet',
    defaultMessage: 'Hello, {name}!',
    description: 'Greeting to welcome the user to the app'
  }
});
export default messages;
[{
  "id": "Component.greet",
  "defaultMessage": "Hello, {name}!",
  "description": "Greeting to welcome the user to the app"
}]

`;

exports[`macros [defineMessages] it should only import react-intl once: [defineMessages] it should only import react-intl once 1`] = `

import { injectIntl } from 'react-intl';
import { defineMessages } from 'react-intl.macro';

const messages = defineMessages({
  'Component.greet': {
    id: 'Component.greet',
    defaultMessage: 'Hello, {name}!',
    description: 'Greeting to welcome the user to the app',
  },
});

export default messages;

      ↓ ↓ ↓ ↓ ↓ ↓

import { injectIntl, defineMessages } from 'react-intl';
const messages = defineMessages({
  'Component.greet': {
    id: 'Component.greet',
    defaultMessage: 'Hello, {name}!',
    description: 'Greeting to welcome the user to the app'
  }
});
export default messages;
[{
  "id": "Component.greet",
  "defaultMessage": "Hello, {name}!",
  "description": "Greeting to welcome the user to the app"
}]

`;

exports[`macros [defineMessages] multiline with TemplateLiteral issue#38: [defineMessages] multiline with TemplateLiteral issue#38 1`] = `

import { defineMessages } from 'react-intl.macro';

const messages = defineMessages({
  'Component.greet': {
    id: 'Component.greet',
    defaultMessage: \`Hello {name}, you have {unreadCount, number} {unreadCount, plural,
      one {message}
      other {messages}
    }\`,
    description: \`Greeting to welcome the user to the app\`,
  },
});

export default messages;

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from "react-intl";
const messages = defineMessages({
  'Component.greet': {
    id: 'Component.greet',
    defaultMessage: \`Hello {name}, you have {unreadCount, number} {unreadCount, plural,
      one {message}
      other {messages}
    }\`,
    description: \`Greeting to welcome the user to the app\`
  }
});
export default messages;
[{
  "id": "Component.greet",
  "defaultMessage": "Hello {name}, you have {unreadCount, number} {unreadCount,plural,one{message} other{messages}}",
  "description": "Greeting to welcome the user to the app"
}]

`;

exports[`macros [defineMessages] one X one: [defineMessages] one X one 1`] = `

import { defineMessages } from 'react-intl.macro';

const messages = defineMessages({
  'Component.greet': {
    id: 'Component.greet',
    defaultMessage: 'Hello, {name}!',
    description: 'Greeting to welcome the user to the app',
  },
});

export default messages;

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from "react-intl";
const messages = defineMessages({
  'Component.greet': {
    id: 'Component.greet',
    defaultMessage: 'Hello, {name}!',
    description: 'Greeting to welcome the user to the app'
  }
});
export default messages;
[{
  "id": "Component.greet",
  "defaultMessage": "Hello, {name}!",
  "description": "Greeting to welcome the user to the app"
}]

`;

exports[`macros [defineMessages] one X two: [defineMessages] one X two 1`] = `

import { defineMessages } from 'react-intl.macro';

const messages = defineMessages({
  'Component.greet': {
    id: 1,
    defaultMessage: 'Hello, {name}!',
    description: 'Greeting to welcome the user to the app',
  },
  'Component.greet2': {
    id: 2,
    defaultMessage: 'Hello, {name}!',
    description: 'Greeting to welcome the user to the app',
  },
});

export default messages;

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from "react-intl";
const messages = defineMessages({
  'Component.greet': {
    id: 1,
    defaultMessage: 'Hello, {name}!',
    description: 'Greeting to welcome the user to the app'
  },
  'Component.greet2': {
    id: 2,
    defaultMessage: 'Hello, {name}!',
    description: 'Greeting to welcome the user to the app'
  }
});
export default messages;
[{
  "id": 1,
  "defaultMessage": "Hello, {name}!",
  "description": "Greeting to welcome the user to the app"
}, {
  "id": 2,
  "defaultMessage": "Hello, {name}!",
  "description": "Greeting to welcome the user to the app"
}]

`;

exports[`macros [defineMessages] should evaluate with expression issue#38: [defineMessages] should evaluate with expression issue#38 1`] = `

import { defineMessages } from 'react-intl.macro';

const messages = defineMessages({
  'Component.greet': {
    id: 0 + 1,
    defaultMessage: \`\${1 + 2} Hello {name}, you have {unreadCount, number} {unreadCount, plural,
      one {message}
      other {messages}
    }\`,
    description: \`Greeting to welcome the user to the app \${1+ 1}\`,
  },
});

export default messages;

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from "react-intl";
const messages = defineMessages({
  'Component.greet': {
    id: 0 + 1,
    defaultMessage: \`\${1 + 2} Hello {name}, you have {unreadCount, number} {unreadCount, plural,
      one {message}
      other {messages}
    }\`,
    description: \`Greeting to welcome the user to the app \${1 + 1}\`
  }
});
export default messages;
[{
  "id": 1,
  "defaultMessage": "3 Hello {name}, you have {unreadCount, number} {unreadCount,plural,one{message} other{messages}}",
  "description": "Greeting to welcome the user to the app 2"
}]

`;

exports[`macros [defineMessages] two X one: [defineMessages] two X one 1`] = `

import { defineMessages } from 'react-intl.macro';

export const message1 = defineMessages({
  'Component.greet2': {
    id: 'Component.greet2',
    defaultMessage: 'Hello, {name}!',
    description: 'Greeting to welcome the user to the app',
  },
});

export const message2 = defineMessages({
  'Component.greet': {
    id: 'Component.greet',
    defaultMessage: 'Hello, {name}!',
    description: 'Greeting to welcome the user to the app',
  },
});

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from "react-intl";
export const message1 = defineMessages({
  'Component.greet2': {
    id: 'Component.greet2',
    defaultMessage: 'Hello, {name}!',
    description: 'Greeting to welcome the user to the app'
  }
});
export const message2 = defineMessages({
  'Component.greet': {
    id: 'Component.greet',
    defaultMessage: 'Hello, {name}!',
    description: 'Greeting to welcome the user to the app'
  }
});
[{
  "id": "Component.greet2",
  "defaultMessage": "Hello, {name}!",
  "description": "Greeting to welcome the user to the app"
}, {
  "id": "Component.greet",
  "defaultMessage": "Hello, {name}!",
  "description": "Greeting to welcome the user to the app"
}]

`;
